--- a/assets/style.css
+++ b/assets/style.css
@@ -1,45 +1,54 @@
 * {
-
-    box-sizing: border-box;
+    display:flex;    
+    box-sizing: content-box;
     padding: 0;
     margin: 0;
+
 }
 
-body {
+.body {
     background-color: #d9dcd6;
 }
 
 .header {
+    display: inline-flexbox;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
+.nav {
+    display: block;
+    display: flexbox;
+}
 
 .header h1 {
-    display: inline-block;
+    display: inline;
     font-size: 48px;
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: black
 }
 
 .header div {
-    padding-top: 15px;
-    margin-right: 20px;
+    display: inline;
+    padding-top: 50px;
+    margin-left: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
+.ul {
+    display: inside;
+    align-content: flex-end;
     list-style-type: none;
 }
-
 .header div ul li {
-    display: inline-block;
+    display: inline-flex;
     margin-left: 25px;
+    
 }
 
 a {
@@ -52,16 +61,17 @@ p {
 }
 
 .hero {
-    height: 800px;
+    height: 1200px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    margin-left: 50%;
     background-size: cover;
     background-position: center;
+    
 }
 
 .float-left {
-    float: left;
+    float: right;
     margin-right: 25px;
 }
 
@@ -75,67 +85,27 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
+.img {
+    display: block;
+    justify-items: left;
+}
+.hero-text {
+    text-align: right;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    color: white;
+}
+.Web-Page-Developement {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-lead {
-    margin-bottom: 32px;
+    background-color: #0072bb;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.Main {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,7 +114,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.All-Kinds-Of-Stuff {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -153,49 +123,33 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.Web-Page-Developement img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.Main-Projects img {
     max-height: 200px;
+    display: inline-block;
 }
 
-.social-media-marketing img {
-    max-height: 200px;
-}
+.Side-Projects img {
+    max-height: 200px;}
 
-.search-engine-optimization h2 {
+.Main-Projects h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.Side-Projects h2 {  
     margin-bottom: 20px;
     font-size: 36px;
 }
 
 .footer {
+    position: bottom;
     padding: 30px;
-    clear: both;
+    clear: inline-end;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
-    font-size: 20px;
-}
